--- a/package.json
+++ b/package.json
@@ -9,8 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/pro-layout": "^7.17.15",
+    "antd": "^5.11.2",
+    "axios": "^1.6.2",
+    "bcryptjs": "^2.4.3",
+    "dayjs": "^1.11.10",
+    "filestack-react": "^4.0.1",
+    "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.0.1",
+    "next": "^12.3.4",
+    "process": "^0.11.10",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.3"
+    "react-icons": "^4.12.0",
+    "react-to-print": "^2.14.15"
+  },
+  "devDependencies": {
+    "dotenv": "^16.3.1"
   }
 }
