--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "antd": "^5.11.2",
     "axios": "^1.6.2",
     "bcryptjs": "^2.4.3",
+    "chart.js": "^3.9.1",
     "dayjs": "^1.11.10",
     "filestack-react": "^4.0.1",
     "js-cookie": "^3.0.5",
@@ -21,6 +22,7 @@
     "next": "^13.5.6",
     "process": "^0.11.10",
     "react": "^18",
+    "react-chartjs-2": "^4.3.1",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
     "react-to-print": "^2.14.15"
