--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-chartjs-2": "^4.3.1",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-to-print": "^2.14.15"
   },
   "devDependencies": {
